--- a/404.html
+++ b/404.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <script type="text/javascript">
-            window.location.href = "https://www.dsflix.tk/"
+            window.location.href = "https://www.filmapp.tk/"
         </script>
         <title>Redirigiendo</title>
     </head>
     <body>
-        Si no es redirigido automáticamente, siga <a href='https://www.dsflix.tk/'>this</a>.
+        Si no es redirigido automáticamente, siga <a href='https://www.filmapp.tk/'>this</a>.
     </body>
 </html>
