--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <p class="p-large">¡ Enserio te lo perderás ? - Que esperas !</p>
 				   
 			
-                            <a class="btn-solid-lg page-scroll" href="https://bit.ly/FilmApp2PlayStore"><i class="fab fa-google-play"></i>DESCARGAR AHORA</a>
+                            <a class="btn-solid-lg page-scroll" href="https://bit.ly/FilmApp2OfficialApk"><i class="fab fa-google-play"></i>DESCARGAR AHORA</a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
