--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Film App 2.0 ">
+    <meta name="description" content="Film App v2 ">
     <meta name="author" content="Film Apps">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -116,7 +116,7 @@
                             <p class="p-large">¡ Enserio te lo perderás ? - Que esperas !</p>
 				   
 			
-                            <a class="btn-solid-lg page-scroll" href="https://bit.ly/FilmApp2OfficialApk"><i class="fab fa-google-play"></i>DESCARGAR AHORA</a>
+                            <a class="btn-solid-lg page-scroll" href="https://bit.ly/FilmAppV2PlayStore"><i class="fab fa-google-play"></i>DESCARGAR AHORA</a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
